--- a/CF_Explainer_Test.ipynb
+++ b/CF_Explainer_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "dd495b3c",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "40355f86",
    "metadata": {
     "scrolled": false
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "4cb5791d",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "23a0db90",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "ae3881c3",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "tensor(2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "35684884",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "tensor(9)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "bec1f35e",
    "metadata": {},
    "outputs": [
@@ -325,8 +325,8 @@
     "        else:\n",
     "            raise Exception(\"Optimizer is not currently supported.\")\n",
     "        \n",
-    "        original_prediction  = model(x, edge_index, **kwargs)\n",
-    "        print('org pred', original_prediction[index])\n",
+    "        #original_prediction  = model(x, edge_index, **kwargs)\n",
+    "        #print('org pred', original_prediction[index])\n",
     "        print('target', target[index])\n",
     "        for i in range(self.epochs):\n",
     "            optimizer.zero_grad()\n",
@@ -775,7 +775,7 @@
     "                self.hard_edge_mask = self.edge_mask.grad != 0.0\n",
     "\n",
     "    def _initialize_masks(self, x: Tensor, edge_index: Tensor):\n",
-    "        node_mask_type = self.explainer_config.node_mask_type\n",
+    "        node_mask_type = None\n",
     "        edge_mask_type = self.explainer_config.edge_mask_type\n",
     "\n",
     "        device = x.device\n",
