Done with cf-explainer

--- a/CF_Explainer_Test.ipynb
+++ b/CF_Explainer_Test.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8eb6ad07",
    "metadata": {
     "scrolled": false
@@ -502,15 +502,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 loss: -0.18 | n_masked_edges: 0| pred_class: 0| max_grad: 0.07\n",
-      "Epoch 1 loss: -0.14 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n"
+      "Epoch 0 loss: -0.77 | n_masked_edges: 0| pred_class: 2| max_grad: 0.03\n",
+      "Epoch 1 loss: -0.76 | n_masked_edges: 0| pred_class: 2| max_grad: 0.09\n",
+      "Epoch 2 loss: -0.57 | n_masked_edges: 0| pred_class: 2| max_grad: 0.13\n",
+      "Epoch 3 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.09\n",
+      "Epoch 4 loss: -0.66 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 5 loss: -0.69 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 6 loss: -0.68 | n_masked_edges: 0| pred_class: 2| max_grad: 0.11\n",
+      "Epoch 7 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 8 loss: -0.67 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 9 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 10 loss: -0.68 | n_masked_edges: 0| pred_class: 2| max_grad: 0.11\n",
+      "Epoch 11 loss: -0.76 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 12 loss: -0.70 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 13 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 14 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 15 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 16 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 17 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 18 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.11\n",
+      "Epoch 19 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 20 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.11\n",
+      "Epoch 21 loss: 0.18 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 22 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 23 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 24 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 25 loss: 0.18 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 26 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 27 loss: -0.76 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 28 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 29 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 30 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 31 loss: -0.76 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 32 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 33 loss: 0.18 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 34 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 35 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 36 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 37 loss: 0.21 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 38 loss: -0.73 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 39 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 40 loss: -0.74 | n_masked_edges: 0| pred_class: 2| max_grad: 0.11\n",
+      "Epoch 41 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 42 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 43 loss: -0.73 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 44 loss: 0.21 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 45 loss: -0.73 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 46 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 47 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 48 loss: -0.73 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 49 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 50 loss: -0.73 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 51 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 52 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 53 loss: 0.21 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 54 loss: -0.74 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 55 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 56 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 57 loss: 0.21 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 58 loss: -0.74 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 59 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 60 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 61 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 62 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 63 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 64 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.11\n",
+      "Epoch 65 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 66 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 67 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 68 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 69 loss: -0.73 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 70 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 71 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 72 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 73 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 74 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 75 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 76 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 77 loss: 0.25 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 78 loss: -0.76 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 79 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 80 loss: 0.18 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 81 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 82 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 83 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 84 loss: -0.76 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 85 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 86 loss: -0.74 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 87 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 88 loss: -0.75 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 89 loss: 0.23 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 90 loss: 0.18 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 91 loss: -0.71 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 92 loss: 0.19 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 93 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 94 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 95 loss: -0.72 | n_masked_edges: 0| pred_class: 2| max_grad: 0.12\n",
+      "Epoch 96 loss: 0.20 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 97 loss: 0.21 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Epoch 98 loss: -0.74 | n_masked_edges: 0| pred_class: 2| max_grad: 0.14\n",
+      "Epoch 99 loss: 0.22 | n_masked_edges: 0| pred_class: 0| max_grad: 0.10\n",
+      "Ground-truth label 0\n",
+      "Counterfactual visualization plot has been saved to 'subgraph.pdf'\n",
+      "Masked edges for node 100: \n",
+      " tensor([], size=(2, 0), dtype=torch.int64)\n"
      ]
     }
    ],
    "source": [
     "explainer = Explainer(\n",
     "    model=model,\n",
-    "    algorithm=CFExplainer(epochs=100, lr=.5),\n",
+    "    algorithm=CFExplainer(epochs=100, lr=.25),\n",
     "    explanation_type='model',\n",
     "    edge_mask_type='object',\n",
     "    model_config=dict(\n",
@@ -520,7 +622,7 @@
     "    ),\n",
     ")\n",
     "\n",
-    "node_index = 10\n",
+    "node_index = 100\n",
     "explanation = explainer(data.x, data.edge_index, index=node_index)\n",
     "path = 'subgraph.pdf'\n",
     "explanation.visualize_graph(path)\n",
@@ -535,25 +637,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "f735b26b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.5606)\n",
-      "tensor(0.5632)\n",
-      "tensor(0.5487)\n",
-      "tensor(0.5514)\n",
-      "tensor(0.5621)\n",
-      "tensor(0.5524)\n",
-      "tensor(0.5479)\n",
-      "tensor(0.5542)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in explanation['edge_mask']:\n",
     "    if i > 0:\n",
