--- a/CF_Explainer_Test.ipynb
+++ b/CF_Explainer_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dd495b3c",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a7978afb",
    "metadata": {},
    "outputs": [
@@ -29,21 +29,21 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: torch_geometric in c:\\users\\gupta\\anaconda3\\lib\\site-packages (2.3.0)\n",
-      "Requirement already satisfied: requests in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (2.28.2)\n",
-      "Requirement already satisfied: pyparsing in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (3.0.9)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (1.0.2)\n",
-      "Requirement already satisfied: scipy in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (1.7.3)\n",
-      "Requirement already satisfied: psutil>=5.8.0 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (5.9.0)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (2.11.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (4.64.1)\n",
       "Requirement already satisfied: numpy in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (1.22.4)\n",
+      "Requirement already satisfied: psutil>=5.8.0 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (5.9.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (2.28.2)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (1.0.2)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (4.64.1)\n",
+      "Requirement already satisfied: pyparsing in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (3.0.9)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (2.11.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch_geometric) (1.7.3)\n",
       "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from jinja2->torch_geometric) (2.0.1)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from requests->torch_geometric) (2022.12.7)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from requests->torch_geometric) (1.26.15)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from requests->torch_geometric) (2.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from requests->torch_geometric) (1.26.15)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from requests->torch_geometric) (2.0.4)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from scikit-learn->torch_geometric) (1.1.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from scikit-learn->torch_geometric) (2.2.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from scikit-learn->torch_geometric) (1.1.1)\n",
       "Requirement already satisfied: colorama in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from tqdm->torch_geometric) (0.4.6)\n"
      ]
     },
@@ -51,12 +51,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
@@ -71,6 +65,18 @@
      "text": [
       "Requirement already satisfied: torch in c:\\users\\gupta\\anaconda3\\lib\\site-packages (1.12.1)\n",
       "Requirement already satisfied: typing_extensions in c:\\users\\gupta\\anaconda3\\lib\\site-packages (from torch) (4.4.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\gupta\\anaconda3\\lib\\site-packages)\n"
      ]
     }
    ],
@@ -95,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "40355f86",
    "metadata": {
     "scrolled": false
